# QuLab

./: .gitignore  .pyup.yml  .readthedocs.yml  .travis.yml  CLAUDE.md  CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  a.out  demo_client.py  demo_local.py  package-lock.json  package.json  pylint_refactor_report.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  t.c  tsconfig.json  webpack.config.js
.github/: PULL_REQUEST_TEMPLATE.md
docs/: conf.py  index.rst  introduction.rst  requirements.txt
drivers/: 33120A.py  81110A.py  AFG3102.py  DG645.py  DPO4104B.py  DSA875.py  HP81110A.py  IT6302.py  NetworkAnalyzer.py  PSG_SignalGenerator.py  SR620.py  Tek_AWG.py  wx_AWG.py
examples/: classfiler.py  dht.py  instrument.py  jupyter-notebook.py  start.py
lab/: __init__.py  _app.py  _bootstrap.py  _importer.py  _plot.py  _query.py  _rcmap.py  _unit.py  _version.py  admin.py  base.py  config.py  util.py  waveform.py
qulab/: __init__.py  __main__.py  _app.py  _config.py  _driver.py  _version.py  bootstrap.py  config.py  contextvars.py  dicttree.py  driver.py  exceptions.py  expression.py  fun.pyx  job.py  loader.py  loader_newDriver.py  log.py  protocol.py  registry.py  rpc.py  serialize.py  signal.py  sugar.py  typing.py  umsgpack.py  util.py  utils.py  version.py  waveform.py
skills/: GUIDE.md
src/: actions.ts  dispatch.ts  index.html  index.tsx  qulab.h  reducer.ts  state.ts  store.ts  styles.css
tests/: config.py  conftest.py  test_auto_framework.py  test_config.py  test_dicttree.py  test_driver.py  test_expression.py  test_job.py  test_kad.py  test_loader.py  test_log.py  test_protocol.py  test_registry.py  test_rpc.py  test_scan_iter.py  test_sched_tree.py  test_security.py  test_serialize.py  test_server_worker.py  test_storage.py  test_sugar.py  test_umsgpack.py  test_utils.py  test_waveform.py
(+438 files in other folders)
